--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>me.loule.navigation/me.loule.navigation.HelloApplication</mainClass>
+                            <mainClass>me.loule.navigation/me.loule.navigation.Main</mainClass>
                         </configuration>
                     </execution>
                 </executions>
